--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-alpha.8",
     "@types/node": "22.15.19",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
+    "lucide-react": "^0.511.0",
+    "motion": "^12.12.1",
     "next": "15.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "zod": "^3.25.7"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "trailingComma": "all"
   }
 }
