--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "next": "15.3.2",
+    "nuqs": "^2.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.56.4",
